--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<html>
-    <head>
-        <title>Sailors</title>
-    </head>
-    <body>
-        <h1>Sailers</h1>
-        <p>Sail with us.</p>
-    </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Sailors</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+</head>
+<body>
+	<nav>
+		<img src="logo.png" alt="Sailors logo" id="logo" width="50px" height="50px">
+		<div id="links">
+			<a>About</a>
+			<a>Projects</a>
+			<a>Contact</a>
+		</div>
+		<div id="social-media">
+			<a>Instagram</a>
+			<a>Dribble</a>
+			<a>LinkedIn</a>
+		</div>
+		</div>
+	</nav>
+</body>
 </html>
