--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <footer class="footer">
         <div class="social-media-footer">
             <div><img src="instagram-logo-footer.svg" alt="Instagram logo" id="logo-footer" width="35px" height="35px"></div>
-            <div><img src="linkedin-logo.svg" alt="Linkedin logo" id="logo-footer" width="35px" height="35px"></div>
-            <div><img src="dribble-logo.svg" alt="Dribble logo" id="logo-footer" width="35px" height="35px"></div>
+            <div><img src="linkedin-logo-footer.svg" alt="Linkedin logo" id="logo-footer" width="35px" height="35px"></div>
+            <div><img src="dribble-logo-footer.svg" alt="Dribble logo" id="logo-footer" width="35px" height="35px"></div>
         </div>
         <span id="links-footer">
             SAILORS | PROJECTS | ABOUT US | CONTACT
